--- a/api.hanami.blog/src/main/resources/application.properties
+++ b/api.hanami.blog/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.show-sql=true
 
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
+
+spring.jackson.time-zone=America/Sao_Paulo
