--- a/api.hanami.blog/src/main/resources/application.properties
+++ b/api.hanami.blog/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/api.hanami.blog?useTimezone=true&serverTimezone=America/Sao_Paulo&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=7988
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
