--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
- HEAD
-
 # Log file
 *.log
 
@@ -21,7 +19,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
-/.metadata/
+/metadata/
 
 HELP.md
 target/
@@ -56,4 +54,21 @@ build/
 
 ### VS Code ###
 .vscode/
-recovery-branch-2
+
+### Custom Exclusions ###
+*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
+
